apps/kuard-kustom/base/kuard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard
  labels:
    app: kuard
spec:
  selector:
    app: kuard
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
